# wellflow

./: pyproject.toml
examples/: ecoli_ca_knockout_tutorial.ipynb
src/wellflow/: plate.py
