[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellflow"
version = "0.1.0"
description = "Plate reader growth-rate analysis utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name="Eden Elkayam", email="eelkayam@rockefeller.edu" }
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.23",
  "openpyxl>=3.1",
  "scipy>=1.9",
  "matplotlib>=3.6",
  "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
